[package]
name = "crabpicker"
version = "0.1.4"
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Coca162/crabpicker"
categories = ["command-line-utilities"]
keywords = ["x11", "color-picker", "utility", "color"]
description = "A cross-platform color picker in rust"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
winit = "0.28.3"
screenshots = { version = "0.5.2", optional = true }
image = { version = "0.24.5", default-features = false, features = ["png"] }
softbuffer = "0.2.0"
copypasta-ext = { version = "0.4.4", default-features = false, features = ["x11-bin", "wayland-bin"] }
termcolor = "1.2.0"
clap = { version = "4.2.4", features = ["derive"] }
x11 = { version = "2.21.0", features = ["xlib"], optional = true }

[features]
default = ["screenshots_crate"]
screenshots_crate = ["dep:screenshots"]
flameshot = []
x11=["dep:x11"]
